--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script defer src="scripts/script.js"></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <h1>Etch-a-Sketch</h1>
+        <div id="grid"></div>
+    </div>
 </body>
 </html>
