--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <h1>Etch-a-Sketch</h1>
+        <button id="change-squares">Change Number of Grid Squares</button>
         <div id="grid"></div>
     </div>
 </body>
