Add clear button to clear the grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">
         <h1>Etch-a-Sketch</h1>
-        <button id="change-squares">Change Number of Grid Squares</button>
+        <div id="buttons">
+            <button id="change-squares">Change Number of Grid Squares</button>
+            <button id="reset">Clear Grid</button>
+        </div>
         <div id="grid"></div>
     </div>
 </body>
